--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,14 @@
     "build": "npm run react-build && electron-builder"
   },
   "keywords": [],
-  "type" : "module",
+  "type": "module",
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
     "concurrently": "^9.1.2",
-    "electron": "^34.0.1"
+    "electron": "^34.0.1",
+    "electron-reload": "^2.0.0-alpha.1"
   },
   "dependencies": {
     "axios": "^1.7.9",
