--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "axios": "^1.7.9",
     "electron-is-dev": "^1.2.0",
-    "electron-store": "^10.0.1"
+    "electron-store": "^10.0.1",
+    "leaflet": "^1.9.4",
+    "react-leaflet": "^5.0.0"
   }
 }
