--- a/frontend/react-app/package.json
+++ b/frontend/react-app/package.json
@@ -14,9 +14,12 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.1",
+    "leaflet": "^1.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.3"
+    "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.1.3",
+    "react-yandex-maps": "^4.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.7",
