--- a/frontend/react-app/package.json
+++ b/frontend/react-app/package.json
@@ -13,13 +13,20 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.4.1",
+    "@mui/icons-material": "5.15.15",
+    "@mui/material": "5.15.15",
+    "@mui/system": "5.15.15",
+    "@mui/x-data-grid": "5.17.24",
+    "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
+    "formik": "^2.4.6",
     "leaflet": "^1.9.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-leaflet": "^5.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-player": "^2.16.0",
     "react-router-dom": "^7.1.3",
-    "react-yandex-maps": "^4.6.0"
+    "react-yandex-maps": "^4.4.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.7",
